--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 				                <li class="mb-3"><a href="https://www.linkedin.com/in/hariharan-mani/"><span class="fa-container text-center mr-2"><i class="fab fa-linkedin-in fa-fw"></i></span>linkedin.com/in/hariharan-mani</a></li>
 								<li class="mb-3"><a href="https://github.com/hariit"><span class="fa-container text-center mr-2"><i class="fab fa-github"></i></span>github.com/hariit/</a></li>
 				                <li class="mb-3"><a href="https://www.kaggle.com/hariit"><span class="fa-container text-center mr-2"><i class="fab fa-kaggle"></i></span>kaggle.com/hariit/</a></li>
-								<li class="mb-3"><a href="https://cs1e52606905f57x4cd7x9df.file.core.windows.net/cs-1982027c-student-tp-edu-sg-10032000767d9d04/Hariharan_Resume.docx"><span class="fa-container text-center mr-2"><i class="fas fa-download"></i></span>Resume Download</a></li>
+								<li class="mb-3"><a href="https://github.com/hariit/profile/blob/master/Hariharan_Resume.docx"><span class="fa-container text-center mr-2"><i class="fas fa-download"></i></span>Resume Download</a></li>
 						    </ul>
 					    </div><!--//secondary-info-->
 					    
